chore: prepare ChromaForge 1.0.0 release
